# SimpleOpenGL

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/resources/: fragment.glsl
app/resources/objects/laptop/: Lowpoly_Notebook_2.mtl
app/resources/shaders/: common.frag  common.vert  fragment.glsl  vertex.glsl
app/src/: application.cpp  application.h  iapplication.h  main.cpp  mainwindow.cpp  mainwindow.h
app/src/GPU-tools/: gpucontext.h  igpuidentifier.h  iprogram.h  program.cpp  program.h  shader.cpp  shader.h  shadertype.h
app/src/content/: contentcontroller.cpp  contentcontroller.h  shadercontext.cpp  shadercontext.h
app/src/content/mesh-loader/: meshloader.cpp  meshloader.h
app/src/event/: event.h  eventhandler.cpp  eventhandler.h
app/src/event/keyevents/: keyactionevent.cpp  keyactionevent.h  keyboard.h  keypressevent.cpp  keypressevent.h  keyreleaseevent.cpp  keyreleaseevent.h
app/src/event/mouseevents/: mouse.h  mouseactionevent.cpp  mouseactionevent.h  mousemoveevent.cpp  mousemoveevent.h  mousepressevent.cpp  mousepressevent.h  mousereleaseevent.cpp  mousereleaseevent.h
app/src/fileLoader/: fileloader.cpp  fileloader.h  ifileloader.h
app/src/keyboard/: keyboard.h
app/src/model/: mesh.cpp  mesh.h  modelcontroller.cpp  modelcontroller.h  vertex.h
app/src/model/fileLoader/: fileloader.h
app/src/model/item/: iitem.h  item.cpp  item.h
app/src/model/modelitem/: modelitem.cpp  modelitem.h
app/src/model/obj-loader/: datatype.h  objloader.cpp  objloader.h
app/src/modelloader/: modelloader.cpp  modelloader.h
app/src/scene/: eventhandler.h  scene.cpp  scene.h  scenecontroller.cpp  scenecontroller.h
app/src/scene/camera/: camera.cpp  camera.h
app/src/scene/items/: graphicsitem.cpp  graphicsitem.h  iitem.h  item.cpp  item.h  testitem.cpp  testitem.h
app/src/scene/mesh/: mesh.cpp  mesh.h
app/src/scene/private/: sceneimpl.cpp  sceneimpl.h
app/src/scene/private/gpudatacontroller/: gpudatacontroller.cpp  gpudatacontroller.h
app/src/shader/: ishaderwrapper.h  program.cpp  program.h  shader.cpp  shader.h
app/src/shaders/: shaderloader.cpp  shaderloader.h
app/src/tools/: color.h  stb_image.cpp  stb_image.h  texture.h  texturetype.h  vertex.h
app/src/utils/file-loader/: fileloader.cpp  fileloader.h
app/src/utils/internal-id/: internalid.cpp  internalid.h
